test_programs/compile_failure/duplicate_declaration/src/main.nr
// Duplicate functions should not compile
fn hello(x: field) -> field {
    x
}

fn hello(x: field) -> field {
    x
}
